fix example on IE, add placeholder for color animation

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script src="emile.js"></script>
 
 <div id="test1" style="position:absolute;left:0px;background:#f00">test</div>
-<div id="test2" style="position:absolute;left:0px;top:400px;background:#0f0">test</div>
+<div id="test2" style="border:0px solid blue;position:absolute;left:0px;top:400px;background:#0f0">test</div>
 
 <script>
   emile.anim('test1', 'left:100px;padding-bottom:100px', { duration: 4000 });
