remove random bounce file. make emile module. and update slide example

--- a/examples/slide.html
+++ b/examples/slide.html
@@ -91,7 +91,24 @@
       }, function () {
         emile('emile', {
           opacity: 1,
-          duration: 1000
+          duration: 1000,
+          after: function () {
+            function f1() {
+              emile('emile', {
+                duration: 1000,
+                color: '#ff0000',
+                after: f2
+              });
+            }
+            function f2() {
+              emile('emile', {
+                duration: 1000,
+                color: '#00ff00',
+                after: f1
+              });
+            }
+            f1();
+          }
         });
       });
     </script>
