--- a/test/emile.html
+++ b/test/emile.html
@@ -23,7 +23,7 @@
   <ol id="tests"></ol>
   <script>
 
-    sink('Basic', function (test, ok, before, after) {
+    sink('Emile', function (test, ok, before, after) {
 
       test('basic', 3, function () {
         var element = document.getElementById('test_basic');
