native css-transition support

--- a/test/emile.html
+++ b/test/emile.html
@@ -10,7 +10,7 @@
       top: -999em;
     }
   </style>
-  <script src="../emile.js"></script>
+  <script src="../src/emile.js"></script>
   <script src="../build/sink/src/sink.js"></script>
 </head>
 <body>
