--- a/examples/slide.html
+++ b/examples/slide.html
@@ -65,29 +65,34 @@
       <div id="se"></div>
     </div>
     <script src="../src/emile.js" type="text/javascript"></script>
+    <script src="../src/easings.js" type="text/javascript"></script>
     <script type="text/javascript">
       emile('nw', {
         "background-color": '#ff00ff',
         left: 500,
         top: 100,
+        easing: easings.bounce,
         duration: 1000
       });
       emile('ne', {
         "background-color": '#0000ff',
         right: 500,
         top: 100,
+        easing: easings.bounce,
         duration: 1000
       });
       emile('sw', {
         "background-color": '#00ff00',
         left: 500,
         bottom: 100,
+        easing: easings.bounce,
         duration: 1000
       });
       emile('se', {
         'background-color': '#00ccff',
         right: 500,
         bottom: 100,
+        easing: easings.bounce,
         duration: 1000
       }, function () {
         emile('emile', {
